Fix text-align

--- a/src/assets/scss/screens/_algorithm.scss
+++ b/src/assets/scss/screens/_algorithm.scss
@@ -65,7 +65,7 @@
             padding-right:1rem;
             padding-top:0.5rem;
             clear: both; 
-            float: left;      
+            text-align:left 
         }
     }
 
